--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,7 +34,8 @@ subprojects {
 }
 
 def getNpmVersion() {
-    def inputFile = new File("../../package.json")
+    commandLine 'cd ../ && ls'
+    def inputFile = new File("../package.json")
     def packageJson = new JsonSlurper().parseText(inputFile.text)
     return packageJson["version"]
 }
